--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,6 @@
       <div id="img-container" class="img-container"></div>
       <button id="load-btn" class="load-btn">Load image</button>
     </div>
-    <script src="script.js"></script>
+    <script async src="script.js"></script>
   </body>
 </html>
